--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
-version: '3.8'
+# docker-compose.yml
+version: "3.8"
 
 services:
-  iris-api:
+  diabetes-api:
     build: .
+    container_name: diabetes-api
     ports:
       - "8000:8000"
+    # Dev: mount code for live reload
     volumes:
       - .:/app
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     restart: unless-stopped
